[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Utilities/ChickenNest/chicken.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Utilities/ChickenNest/nest.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Utilities/ChickenNest.gd" type="Script" id=12]

[node name="ChickenNest" type="Node2D"]
script = ExtResource( 12 )

[node name="chicken1" type="TextureRect" parent="."]
margin_left = -120.0
margin_top = 53.0
margin_right = -50.0
margin_bottom = 117.0
texture = ExtResource( 1 )

[node name="chicken2" type="TextureRect" parent="."]
margin_left = -120.0
margin_top = 250.0
margin_right = -50.0
margin_bottom = 314.0
texture = ExtResource( 1 )

[node name="chicken3" type="TextureRect" parent="."]
margin_left = 52.0
margin_top = 425.0
margin_right = 122.0
margin_bottom = 489.0
texture = ExtResource( 1 )

[node name="chicken4" type="TextureRect" parent="."]
margin_left = 256.0
margin_top = 425.0
margin_right = 326.0
margin_bottom = 489.0
texture = ExtResource( 1 )
flip_h = true

[node name="chicken5" type="TextureRect" parent="."]
margin_left = 413.0
margin_top = 250.0
margin_right = 483.0
margin_bottom = 314.0
texture = ExtResource( 1 )
flip_h = true

[node name="chicken6" type="TextureRect" parent="."]
margin_left = 413.0
margin_top = 53.0
margin_right = 483.0
margin_bottom = 117.0
texture = ExtResource( 1 )
flip_h = true

[node name="nestA" type="TextureRect" parent="."]
margin_left = -41.0
margin_top = -158.0
margin_right = 52.0
margin_bottom = -58.0
texture = ExtResource( 2 )

[node name="nestB" type="TextureRect" parent="."]
margin_left = 45.0
margin_top = -158.0
margin_right = 138.0
margin_bottom = -58.0
texture = ExtResource( 2 )

[node name="nestC" type="TextureRect" parent="."]
margin_left = 136.0
margin_top = -158.0
margin_right = 229.0
margin_bottom = -58.0
texture = ExtResource( 2 )

[node name="nestD" type="TextureRect" parent="."]
margin_left = 223.0
margin_top = -158.0
margin_right = 316.0
margin_bottom = -58.0
texture = ExtResource( 2 )

[node name="nestE" type="TextureRect" parent="."]
margin_left = 309.0
margin_top = -158.0
margin_right = 402.0
margin_bottom = -58.0
texture = ExtResource( 2 )
